# matmuldemo

./: .gitignore  1cmake_setup.sh  3cmake_test.sh  CMakeLists.txt  README.md  cmake_build.sh  cmake_setup.sh  matmuldemo.cpp  matmuldemo.cu  matmuldemo.h  matmuldemo_torch.cu
